# my-brightness

./: .gitignore  CMakeLists.txt  daemon.c  myFirst.c
clients/: bright-down.c  bright-up.c  client_common.c  client_common.cpp  client_common.h
